--- a/style.css
+++ b/style.css
@@ -1,18 +1,36 @@
 body {
 	margin: 0px;
-	background-color: #cbdffb;
+	background-image: linear-gradient(#191b1e, #0d0c0e);
+	background-size: cover;
+	background-repeat: no-repeat;
+	height: 641px;
 }
 
 a {
 	text-decoration: none;
 }
 
+.logo a {
+	font-size: 25px;
+	float: left;
+	font-family: Berlin Sans FB;
+	color: #e8e6e9;
+	padding-left: 25px;
+	padding-top: 10px;
+}
+
+.logo a:hover{
+	transition-duration: 1.5s;
+	color: #FFD700;
+}
+
 .nav ul {	
 	list-style-type: none;
 	word-spacing: 40px;
-	text-align: center;
+	text-align: right;
 	padding-top: 20px;
-	color: #9d9d9d;
+	
+	padding-right: 50px;
 }	
 
 .nav li {
@@ -22,79 +40,62 @@ a {
 
 }
 
-.hover {
-	
+.nav a {
+	color: #e8e6e9;
 }
 
-.hover1 {
-	color: #000;
+.nav li:hover {
+	color: #FFD700;
+	transition-duration: 0.5s;
 }
 
-
-.hover:hover {
-	color: #000;
-	transition-timing-function: ease-out;
-	transition-duration: 0.2s;
+.h1, .h2, .h3 {
+	text-align: center;
+	color: #e8e6e9;
+	font-family: Century Gothic;
 
 }
 
 .h1 {
-	font-family: Century Gothic;
-	padding-left: 95px;
-	padding-top: 240px;
-	font-size: 22px;
-	color: #332b3b;
+	font-size: 25px;
+	padding-top: 175px;
 }
 
 .h2 {
-	font-family: Century Gothic;
-	padding-left: 92px;
-	font-size: 55px;
-	color: #332b3b;
-	transition-duration: 0.5s;
+	font-size: 60px;
+	padding-top: 0;
+	font-weight: bold;
+}
+
+.name {
+	color: #FFD700;
 }
 
 .h3 {
-	font-family: Century Gothic;
-	padding-left: 95px;
-	padding-top: 0px;
-	font-size: 24px;
-	color: #332b3b;
+	font-size: 25px;
+	padding-top: 15px;
+	
 }
 
 .hireme {
-	border: none;
-	color: #332b3b;
-	font-family: Montserrat;
-	background-color: #fbd2cb;
-	padding: 10px 10px 10px 10px;
-	font-size: 15px;
-	margin-top: 37px;
-	margin-left: 95px;
-	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+	text-align: center;
+	font-family: Montserrat ;
+	font-size: 20px;
+	background-color: #e8e6e9;
+	border: none; 
+	padding: 5px 5.5px 5px 5.5px;
+
 }
+
 
 .hireme:hover {
-	background-color: #fda99b;
+	background-color: transparent;
+	color: #e8e6e9;
+	border: solid 1px #e8e6e9;
+	transition-duration: 0.5s;
 }
 
-.box1 {
-	width: 375px;
-	height: 350px;
-	background-color: #fbd2cb;
-	position: absolute;
-	bottom: 0px;
-	right: 0px;
+.btndiv {
+	text-align: center;
+	padding-top: 45px;
 }
-
-.box2 {
-	width: 200px;
-	height: 200px;
-	background-color: #fda99b;
-	position: absolute;
-	bottom: 250px;
-	right: 250px;
-	box-shadow: 0 12px 25px 0 rgba(0,0,0,0.24), 0 17px 100px 0 rgba(0,0,0,0.20);
-}
-
-
