--- a/style.css
+++ b/style.css
@@ -1,13 +1,7 @@
-body, html {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-}
 body {
 	margin: 0px;
-	background-image: linear-gradient(#191b1e, #0d0c0e);
-	background-color: #000;
-	background-size: cover;
+	background-color: #191b1e;
+	background-size: cover;	
 	background-repeat: no-repeat;
 	
 }
