--- a/style.css
+++ b/style.css
@@ -1,13 +1,8 @@
-body, html {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-}
+
 body {
 	margin: 0px;
-	background-image: linear-gradient(#191b1e, #0d0c0e);
-	background-color: #000;
-	background-size: cover;
+	background-color: #191b1e;
+	background-size: cover;	
 	background-repeat: no-repeat;
 	
 }
@@ -16,18 +11,17 @@ a {
 	text-decoration: none;
 }
 
-.logo a {
-	font-size: 25px;
+.logo img {
+	width: 100px;
 	float: left;
-	font-family: Berlin Sans FB;
-	color: #e8e6e9;
-	padding-left: 25px;
 	padding-top: 10px;
+	padding-left: 15px;
+	filter: grayscale(100%);
 }
 
-.logo a:hover{
-	transition-duration: 1.5s;
-	color: #FFD700;
+.logo img:hover {
+	transition-duration: 0.8s;
+	filter: none;
 }
 
 .nav ul {	
@@ -89,7 +83,7 @@ a {
 	font-size: 20px;
 	background-color: #e8e6e9;
 	border: none; 
-	padding: 5px 5.5px 5px 5.5px;
+	padding: 5px 6px ;
 
 }
 
