--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 
 body {
 	margin: 0px;
-	background-color: #191b1e;
+	background-image: url('pictures/bg.jpg');
+	background-color: #0c0c0c;
 	background-size: cover;	
 	background-repeat: no-repeat;
 	
@@ -49,6 +50,10 @@ a {
 	transition-duration: 0.5s;
 }
 
+.hover1 {
+	color: #FFD700;
+}
+
 .h1, .h2, .h3 {
 	text-align: center;
 	color: #e8e6e9;
@@ -84,9 +89,7 @@ a {
 	background-color: #e8e6e9;
 	border: none; 
 	padding: 5px 6px ;
-
 }
-
 
 .hireme:hover {
 	background-color: transparent;
@@ -95,7 +98,108 @@ a {
 	transition-duration: 0.5s;
 }
 
+
+
 .btndiv {
 	text-align: center;
 	padding-top: 45px;
+}
+
+
+.contact-form {
+	color: #000;
+	margin-top: 100px;
+	margin-left: 420px;
+	padding-top: 40px;
+	padding-left: 50px;
+	padding-bottom: 87px;
+	padding:; 50px;
+	background-color:  #FFD700;
+	box-sizing: border-box;
+	width: 500px;
+	font-family: Century Gothic;
+
+
+}
+
+.txtb {
+	padding-bottom: 25px;
+
+}
+
+.txtb1 {
+	padding-bottom: 25px;
+	padding-top: 40px;
+}
+
+
+.name1 {
+	width: 376px;
+	font-family: Century Gothic;
+}
+
+#name {
+	width: 380px;
+	height: 20px;
+	border: #ffff 0px;
+}
+
+#email {
+	width: 380px;
+	height: 20px;
+	border: #ffff 0px;
+}
+
+.button {
+	width: 100px;
+	height: 35px;
+	padding: 5px;
+	background-color: #fff;
+	border-radius: 50px;
+	border: #fff; 
+	position: absolute;
+	left: 745px;
+	font-size: 17px;
+}
+
+.button1 {
+	width: 100px;
+	height: 35px;
+	padding: 5px;
+	background-color: #fff;
+	border-radius: 50px;
+	border: #fff; 
+	position: absolute;
+	left: 625px;
+	font-size: 17px;
+}
+
+.button:hover {
+	background-color: transparent;
+	color: #000;
+	border: solid 1px #000;
+	transition-duration: 0.5s;
+}
+
+.button1:hover {
+	background-color: #3d3d3d;
+	color: #fff;
+	border: solid 1px #9d9d9d;
+	transition-duration: 0.5s;
+}
+
+
+.contact-head {
+	text-align: center;
+	padding-right: 30px;
+	font-size: 30px;
+	font-family: Montserrat;
+	font-weight: Bold;
+}
+
+.tfyf {
+	text-align: center;
+	padding-top: 175px;
+	padding-left: 225px;
+	
 }
